--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,23 @@
-*.pyc
-*_pycache_*
-*.swp
-*.egg-info
+# Byte-compiled / optimized / DLL files 
+__pycache__/ 
+*.py[cod] 
+# C extensions 
+*.so 
 
+# Distribution / packaging 
+.Python 
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+cmdline_BitterYear.egg-info/
+.installed.cfg
+*.egg
